# gpt-oss-mcp-server-rust

./: .gitignore  Cargo.toml  Dockerfile.lambda  README.md  build-docker.sh  deploy.sh  template.yaml  test-deployment.sh  test-local.sh
.cargo/: config.toml
src/: main.rs  mcp_server.rs
